# GLE

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  vcpkg.json
include/: engine.hpp  shader.hpp
include/common/: types.hpp
src/: engine.cpp  main.cpp  shader.cpp
